/*
 * Copyright 2022 Google LLC.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// This file is a copy of the public version of feature.proto available in the
// TensorFlow Pip package. This file is used to compile YDF and PYDF without
// requiring the depend on the large dependency of TensorFlow.

syntax = "proto3";

package yggdrasil_decision_forests.tensorflow_no_dep;

message BytesList {
  repeated bytes value = 1;
}
message FloatList {
  repeated float value = 1 [packed = true];
}
message Int64List {
  repeated int64 value = 1 [packed = true];
}

message Feature {
  oneof kind {
    BytesList bytes_list = 1;
    FloatList float_list = 2;
    Int64List int64_list = 3;
  }
}

message Features {
  map<string, Feature> feature = 1;
}

message FeatureList {
  repeated Feature feature = 1;
}

message FeatureLists {
  map<string, FeatureList> feature_list = 1;
}
